--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Trello Dashboard</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
@@ -10,6 +11,7 @@
   </head>
   <body>
     <div id="board" v-cloak>
+      <h1>{{ boardName }}</h1>
       <div class="card" v-for="list in lists">
         <div class="card-content">{{ list.cards.length }}</div>
         <div class="card-footer">{{ list.name }}</div>
